@@ -2,7 +2,7 @@ Package: plotseries
 Type: Package
 Title: Time-Series Plots
 Version: 0.2-0
-Date: 2019-10-30
+Date: 2019-11-05
 Maintainer: Enrico Schumann <es@enricoschumann.net>
 Authors@R: person("Enrico", "Schumann",
                   role  = c("aut", "cre"),
@@ -10,7 +10,10 @@ Authors@R: person("Enrico", "Schumann",
                   comment = c(ORCID = "0000-0001-7601-6576"))
 Description: Plot the time-series of a portfolio value
   or stock price.  The aim is to provide high-quality,
-  informative graphics.
+  informative graphics.  The code for fanplots is based
+  on chapter 15 of "Numerical Methods and Optimization
+  in Finance", second edition, by M. Gilli, D. Maringer
+  and E. Schumann (2019, ISBN:978-0128150658).
 Imports: PMwR, grDevices, graphics, utils, zoo, datetimeutils
 Enhances: zoo
 Suggests: NMOF
